# Battleship

./: .gitignore  README.md  pyproject.toml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
docs/: Intro_hlf.ipynb
keynote/: Firing.key
keynote/img/: Screen Recording 2025-09-29 at 16.19.55.mov  Screen Recording 2025-09-29 at 16.27.05.mov
src/: Battleship.ipynb  main.py  utils.py
